pivot to regex factory

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "lint": "npx prettier -w '**/*.{js,jsx,ts,tsx,vue,html,css,scss,json,md}'",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -21,6 +22,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
     "nuxt": "^3.6.3",
+    "nuxt-icon": "^0.4.2",
     "nuxt-mongoose": "^0.0.9"
   },
   "dependencies": {
