--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "lint": "npx prettier -w '**/*.{js,jsx,ts,tsx,vue,html,css,scss,json,md}'",
+    "lint": "prettier --write .",
+    "lint:check": "prettier --check .",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -19,11 +20,11 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
-    "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
     "nuxt": "^3.6.3",
     "nuxt-icon": "^0.4.2",
-    "nuxt-mongoose": "^0.0.9"
+    "nuxt-mongoose": "^0.0.9",
+    "prettier": "^3.0.0"
   },
   "dependencies": {
     "@gathertown/gather-game-client": "^42.0.0"
