add rule factory, implement live preview

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
   "prettier.prettierPath": "./node_modules/prettier",
-  "eslint.enable": false
+  "eslint.enable": false,
+  "prettier.enable": false
 }
