--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxt/devtools": "^0.7.0",
     "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18.16.19",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
