--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-vue": "^9.15.1",
     "nuxt": "^3.6.5",
     "nuxt-icon": "^0.4.2",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
